objects/AcctSeed__Scheduled_Revenue_Expense__c.object
<CustomObject>
    <description>Used to capture information related to deferred revenue and expenses.</description>
    <fields>
        <fullName>AcctSeed__Account2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The account associated with the scheduled revenue expense record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenue_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account_Payable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Reference to a related Account Payable if using scheduled expenses.</inlineHelpText>
        <label>Payable</label>
        <referenceTo>AcctSeed__Account_Payable__c</referenceTo>
        <relationshipLabel>Amortized Expense</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account__c</fullName>
        <formula>IF(ISBLANK(AcctSeed__Account2__c),AcctSeed__Project__r.AcctSeed__Account__r.Name,AcctSeed__Account2__r.Name)</formula>
        <label>Project Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to specify accounting period for financial reporting. Accounting period must have a value of Open.</inlineHelpText>
        <label>Accounting  Period</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <infoMessage>The accounting period status must be open</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <inlineHelpText>Amount of Scheduled Revenue or Expense. Currency field. Values should be positive.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Reference to a related Billing if using Scheduled Revenue.</inlineHelpText>
        <label>Billing</label>
        <referenceTo>AcctSeed__Billing__c</referenceTo>
        <relationshipLabel>Amortized Revenue</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Amortization Entries (Credit GL Account)</relationshipLabel>
        <relationshipName>Scheduled_Revenue_Expense1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Debit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Amortization Entries (Debit GL Account)</relationshipLabel>
        <relationshipName>Scheduled_Revenue_Expense</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <inlineHelpText>Brief description of the scheduled revenue or expense to help manage selections for sorting and posting.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Fixed_Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fixed Asset</label>
        <referenceTo>AcctSeed__Fixed_Asset__c</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenue_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 1&quot;.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Amortization Entries (GL Account Variable 1)</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 2&quot;.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Amortization Entries (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Scheduled_Revenues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 3&quot;.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Amortization Entries (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Scheduled_Revenues2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the associated ledger.</description>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Amortization_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenue_Expense</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Work break down structure for projects, such as: Phases, Deliverables or Roles.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>AcctSeed__Project_Task__c.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Project allocation of Cost or Revenue.</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>Scheduled indicates the record has not been processed yet. A value of &quot;Posted&quot; indicates the record is final and a debit and credit line have been entered into the transaction object for this revenue or expense.</inlineHelpText>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hidden_Accounting_Period__c</fullName>
        <formula>AcctSeed__Accounting_Period__r.AcctSeed__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden_Accounting Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Periods__c</fullName>
        <label>Number of Periods</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prorate_Start_Day__c</fullName>
        <label>Prorate Start Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prorate_for_Month_1__c</fullName>
        <formula>(AcctSeed__Accounting_Period__r.AcctSeed__End_Date__c - AcctSeed__Accounting_Period__r.AcctSeed__Start_Date__c+1- Prorate_Start_Day__c )/(AcctSeed__Accounting_Period__r.AcctSeed__End_Date__c - AcctSeed__Accounting_Period__r.AcctSeed__Start_Date__c+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prorate % for Month 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Amortization Entry</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Description__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Billings</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Billing__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Billing__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Billings</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Fixed_Assets</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Fixed_Asset__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Fixed_Asset__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Fixed Assets</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Payables</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Account_Payable__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Account_Payable__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Payables</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Posted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Description__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,In Process</value>
        </filters>
        <label>Posted</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unposted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Description__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Approved,In Process</value>
        </filters>
        <label>Unposted</label>
    </listViews>
    <nameField>
        <label>Amortization Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amortization Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Amount_Must_be_Positive</fullName>
        <active>true</active>
        <description>Amount Must be positive.</description>
        <errorConditionFormula>AcctSeed__Amount__c &lt;0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Amount__c</errorDisplayField>
        <errorMessage>The amount must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Project_Task_Required_With_Project</fullName>
        <active>true</active>
        <description>Rule ensures a Project Task is Required if the Project field is used.</description>
        <errorConditionFormula>NOT(ISBLANK(AcctSeed__Project__c)) &amp;&amp; ISBLANK(AcctSeed__Project_Task__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project_Task__c</errorDisplayField>
        <errorMessage>A Project Task is required if a Project is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Value_for_Accounting_Period</fullName>
        <active>true</active>
        <description>Verifies accounting period field is not blank.</description>
        <errorConditionFormula>ISBLANK( AcctSeed__Accounting_Period__c )</errorConditionFormula>
        <errorMessage>A scheduled revenue or expense must contain a value for the accounting period field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Value_for_Credit_GL_Account</fullName>
        <active>true</active>
        <description>Verifies credit gl account field is not blank.</description>
        <errorConditionFormula>ISBLANK( AcctSeed__Credit_GL_Account__c )</errorConditionFormula>
        <errorMessage>A scheduled revenue or expense must contain a value for the credit gl account field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Value_for_Debit_GL_Account</fullName>
        <active>true</active>
        <description>Verifies debit gl account field is not blank.</description>
        <errorConditionFormula>ISBLANK( AcctSeed__Debit_GL_Account__c )</errorConditionFormula>
        <errorMessage>A scheduled revenue or expense must contain a value for the debit gl account field.</errorMessage>
    </validationRules>
</CustomObject>